--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
 ]
+dependencies = [
+    "setuptools>=80.9.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/rodmena-limited/fasthttp"
