--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,18 +48,10 @@ httpit = "fasthttp.__main__:main"
 include = ["fasthttp*"]
 
 [tool.cibuildwheel]
-# Build for Python 3.9-3.13
 build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
-
-# Skip 32-bit builds, PyPy, and musllinux
 skip = "*-win32 *-manylinux_i686 pp* *musllinux*"
-
-# Test that wheels work correctly
 test-requires = "pytest"
-test-command = [
-    "python -c \"import fasthttp; print('FastHTTP imported')\"",
-    "python -c \"from fasthttp import HTTPServer; print('HTTPServer available')\"",
-]
+test-command = "python -c \"import fasthttp; print('FastHTTP imported successfully')\""
 
 [tool.cibuildwheel.macos]
 archs = ["x86_64", "arm64", "universal2"]
@@ -67,9 +59,7 @@ environment = { MACOSX_DEPLOYMENT_TARGET = "10.9" }
 
 [tool.cibuildwheel.linux]
 archs = ["x86_64", "aarch64"]
-before-all = [
-    "yum install -y gcc make || apt-get update && apt-get install -y gcc make build-essential",
-]
+before-all = "yum install -y gcc make"
 manylinux-x86_64-image = "manylinux2014"
 manylinux-aarch64-image = "manylinux2014"
 
