--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,8 +15,28 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - uses: actions/checkout@v4
-    - name: Build wheels
+    
+    - name: Set up Python (Windows)
+      if: runner.os == 'Windows'
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    
+    - name: Install cibuildwheel (Windows)
+      if: runner.os == 'Windows'
+      run: python -m pip install cibuildwheel==2.16.2
+    
+    - name: Build wheels (Windows)
+      if: runner.os == 'Windows'
+      run: python -m cibuildwheel --output-dir wheelhouse
+      env:
+        CIBW_BUILD: cp39-* cp310-* cp311-* cp312-* cp313-*
+        CIBW_SKIP: "*-win32 *-manylinux_i686 pp* *musllinux*"
+    
+    - name: Build wheels (Linux/macOS)
+      if: runner.os != 'Windows'
       uses: pypa/cibuildwheel@v2.16.2
+    
     - uses: actions/upload-artifact@v4
       with:
         name: wheels-${{ matrix.os }}
