--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,36 +12,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]  # Remove windows-latest
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Set up MSVC (Windows)
-      if: runner.os == 'Windows'
-      uses: ilammy/msvc-dev-cmd@v1
-    
-    - name: Set up Python (Windows)
-      if: runner.os == 'Windows'
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install cibuildwheel (Windows)
-      if: runner.os == 'Windows'
-      run: python -m pip install cibuildwheel==2.16.2
-    
-    - name: Build wheels (Windows)
-      if: runner.os == 'Windows'
-      run: python -m cibuildwheel --output-dir wheelhouse
-      env:
-        CIBW_BUILD: cp39-* cp310-* cp311-* cp312-* cp313-*
-        CIBW_SKIP: "*-win32 *-manylinux_i686 pp* *musllinux*"
-        CIBW_BUILD_VERBOSITY: 1
-    
-    - name: Build wheels (Linux/macOS)
-      if: runner.os != 'Windows'
+    - name: Build wheels
       uses: pypa/cibuildwheel@v2.16.2
-    
     - uses: actions/upload-artifact@v4
       with:
         name: wheels-${{ matrix.os }}
