--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "httpit"
-version = "1.21.6"
+dynamic = ["version"]
 description = "Ultra-fast lightweight HTTP server"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -47,6 +47,9 @@ httpit = "fasthttp.__main__:main"
 [tool.setuptools.packages.find]
 include = ["fasthttp*"]
 
+[tool.setuptools.dynamic]
+version = {file = "VERSION"}
+
 [tool.cibuildwheel]
 build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
 skip = "*-win32 *-manylinux_i686 pp* *musllinux*"
@@ -70,3 +73,4 @@ before-build = [
     "pip install setuptools wheel"
 ]
 repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
+
